# cuhk-catalog-scraper

./: .gitignore  README.md  catalog-scraper.py  config.yaml  pyproject.toml
