[project]
name = "cuhk-catalog-scraper"
version = "0.1.0"
description = "CUHK Course Catalog Scraper - Extract course data with local OCR CAPTCHA solving"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.59.0",
    "pandas>=3.0.0",
    "pyyaml>=6.0.0",
    "openpyxl>=3.1.0",
    "ddddocr>=1.4.0",
    "opencv-python>=4.9.0.0",
]

[project.scripts]
cuhk-catalog = "scraper:main"

[build-system]
requires = ["hatch"]
build-backend = "hatch.build"

[tool.hatch.build.targets.wheel]
packages = ["scraper.py"]